src/objects/Scope__c.object
<CustomObject>
    <fields>
        <fullName>Buffer__c</fullName>
        <label>Buffer</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Reactive__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Reactive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Review__c</fullName>
        <label>Code Review</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <label>Deployment</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Management__c</fullName>
        <label>Project Management</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reactive__c</fullName>
        <label>Reactive</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <description>Indicates the status of the scope in the scope review process.</description>
        <label>Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unreviewed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Revision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sum_of_X50_Estimates__c</fullName>
        <label>Sum of 50% Estimates</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing__c</fullName>
        <label>Testing</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Buffer__c +  Code_Review__c +  Deployment__c  +  Reactive__c  +  Project_Management__c +  Testing__c +  Sum_of_X50_Estimates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Scope</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Scopes</fullName>
        <columns>NAME</columns>
        <columns>Total__c</columns>
        <columns>Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Scopes</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>